sonarfixes